feat: add resume path in footer

--- a/data/blog/color-and-data.mdx
+++ b/data/blog/color-and-data.mdx
@@ -4,6 +4,7 @@ date: '2022-09-25'
 tags: ['Data Visualization']
 draft: false
 summary: 'Color makes a chart look better and makes it easier for people to understand the data it shows. Based on the types of data, the colors used for data visualization can be put into three groups: categorical colors, sequential colors, and diverging colors.'
+images: ['/static/images/resource/color-and-data/thumbnail.png']
 ---
 
 <TOCInline toc={props.toc}/>
