--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -7,4 +7,13 @@ linkedin: https://www.linkedin.com/in/tieukhoimai/
 github: https://github.com/tieukhoimai
 ---
 
-A data gal, a master student and another (an amateur writer, maybe). And this is my /maɪ/ blog. The world is a messy place but at least now I have a way of structuring queries about it. And let me share with you my own story or all I known about my career - technical and non-technical in the most naive way.
+As a Data Analyst with 3+ years of experience, I currently hold a dual role at Fossil Group as both an Analytics Project Manager and Data Analyst. Additionally, I specialize in designing intricate data flow mechanisms between connected devices and companion apps. Leveraging my expertise, I ensure seamless and efficient data transfer, providing valuable insights into user behavior, product performance, customer segmentation, and wellness data from wrist-based wearable devices.
+
+I am a dual degree graduate with a BS in Mathematics and Computer Sciences and a BBA in International Business. I have a strong background in data analysis, data engineering, and project management, as well as a keen interest in product development and innovation.
+
+<p align="left">
+  <a href="https://skillicons.dev">
+    <img src="https://skillicons.dev/icons?i=aws,gcp,docker,figma,firebase,github,html,js,mongodb,mysql,nextjs,py,r,vscode" />
+  </a>
+</p>
+
