feat: add image to PostLayout

--- a/data/blog/dimensional-part-2.mdx
+++ b/data/blog/dimensional-part-2.mdx
@@ -4,11 +4,10 @@ date: '2023-08-08'
 tags: ['Data Warehouse']
 draft: false
 summary: 'The topics covered include Degenerate Dimension, Conformed Dimension, Role-Playing Dimension, Junk Dimension, Outrigger Dimension, and Slowly Changing Dimensions (SCD). The SCD category further delves into different types, such as Type 0 to Type 7, each with its unique approach to handling historical and changing data.'
-images: ['/static/images/resource/dimensional-part-2/thumbnail.png']
+image: '/static/images/resource/dimensional-part-2/thumbnail.jpg'
 ---
 
 <TOCInline toc={props.toc}/>
-
 
 ## 1. Degenerate Dimension
 
