feat: modify ListLayoutWithTags.tsx

--- a/data/blog/color-and-data.mdx
+++ b/data/blog/color-and-data.mdx
@@ -205,18 +205,11 @@ Statistical approaches are classified into two types: descriptive statistics and
 
 ## 5. References
 
-[1] Wilke, C. O. (2019). *Fundamentals of data visualization: a primer on making info*
-
-[2] Gaddis, M. L., & Gaddis, G. M. (1990). Introduction to biostatistics: part 1, basic concepts. *Annals of emergency medicine*, *19*(1), 86-89.
-
-[3] [EBMC. (n.d.). Nominal Data](https://www.ebmconsult.com/articles/nominal-data)
-
-[4] CareerFoundry. (2021, May 7). [What is Ratio Data?](https://careerfoundry.com/en/blog/data-analytics/what-is-ratio-data/)
-
-[5] EBMC. (n.d.). [Nonparametric Statistical Analysis](https://www.ebmconsult.com/articles/nonparametric-statistical-analysis).
-
-[6] EBMC. (n.d.). [Parametric Statistical Analysis](https://www.ebmconsult.com/articles/parametric-statistical-analysis).
-
-[7] Adobe Spectrum. (n.d.). [Data Visualization Fundamentals](https://spectrum.adobe.com/page/data-visualization-fundamentals/).
-
-[8] Adobe Spectrum. (n.d.). [Color for Data Visualization](https://spectrum.adobe.com/page/color-for-data-visualization/).
+1. Wilke, C. O. (2019). *Fundamentals of data visualization: a primer on making info*
+2. Gaddis, M. L., & Gaddis, G. M. (1990). Introduction to biostatistics: part 1, basic concepts. *Annals of emergency medicine*, *19*(1), 86-89.
+3. [EBMC. (n.d.). Nominal Data](https://www.ebmconsult.com/articles/nominal-data)
+4. CareerFoundry. (2021, May 7). [What is Ratio Data?](https://careerfoundry.com/en/blog/data-analytics/what-is-ratio-data/)
+5. EBMC. (n.d.). [Nonparametric Statistical Analysis](https://www.ebmconsult.com/articles/nonparametric-statistical-analysis).
+6. EBMC. (n.d.). [Parametric Statistical Analysis](https://www.ebmconsult.com/articles/parametric-statistical-analysis).
+7. Adobe Spectrum. (n.d.). [Data Visualization Fundamentals](https://spectrum.adobe.com/page/data-visualization-fundamentals/).
+8. Adobe Spectrum. (n.d.). [Color for Data Visualization](https://spectrum.adobe.com/page/color-for-data-visualization/).
