--- a/data/blog/dimensional-part-1.mdx
+++ b/data/blog/dimensional-part-1.mdx
@@ -219,18 +219,11 @@ Therefore, *Product were on promotion **but** did not sell*
 
 ## 7. Reference
 
-[1] IBM. (n.d.). [Data modeling](https://www.ibm.com/topics/data-modeling##:~:text=Data%20modeling%20is%20the%20process,between%20data%20points%20and%20structures). Retrieved April 2, 2023.
-
-[2] Varatharajan, S. (2022, January 19). [Relational Data Model in DBMS: Concepts, Constraints, Examples. Guru99](https://www.guru99.com/relational-data-model-dbms.html).
-
-[3] Lucidchart. (n.d.). [ER Diagrams](https://www.lucidchart.com/pages/er-diagrams). Retrieved April 3, 2023.
-
-[4] Heavy AI. (n.d.). [Hierarchical Database. Heavy Technical Glossary](https://www.heavy.ai/technical-glossary/hierarchical-database). Retrieved April 7, 2023.
-
-[5] MongoDB. "[What is an Object-Oriented Database?](http://www.mongodb.com/databases/what-is-an-object-oriented-database)" MongoDB, Accessed 2 Apr. 2023.
-
-[6] Microsoft. "[Database Normalization Description](https://learn.microsoft.com/en-us/office/troubleshoot/access/database-normalization-description)." Microsoft Office Support, Microsoft, 22 Aug. 2020
-
-[7] PhoenixNAP. (n.d.). [Star schema vs snowflake schema: What's the difference?](https://phoenixnap.com/kb/star-vs-snowflake-schema) Retrieved April 5, 2023
-
-[8] Kimball Group. (n.d.). [Factless Fact Table](https://www.kimballgroup.com/data-warehouse-business-intelligence-/static/images/resources/kimball-techniques/dimensional-modeling-techniques/factless-fact-table/). Retrieved April 7, 2023
+1. IBM. (n.d.). [Data modeling](https://www.ibm.com/topics/data-modeling##:~:text=Data%20modeling%20is%20the%20process,between%20data%20points%20and%20structures). Retrieved April 2, 2023.
+2. Varatharajan, S. (2022, January 19). [Relational Data Model in DBMS: Concepts, Constraints, Examples. Guru99](https://www.guru99.com/relational-data-model-dbms.html).
+3. Lucidchart. (n.d.). [ER Diagrams](https://www.lucidchart.com/pages/er-diagrams). Retrieved April 3, 2023.
+4. Heavy AI. (n.d.). [Hierarchical Database. Heavy Technical Glossary](https://www.heavy.ai/technical-glossary/hierarchical-database). Retrieved April 7, 2023.
+5. MongoDB. "[What is an Object-Oriented Database?](http://www.mongodb.com/databases/what-is-an-object-oriented-database)" MongoDB, Accessed 2 Apr. 2023.
+6. Microsoft. "[Database Normalization Description](https://learn.microsoft.com/en-us/office/troubleshoot/access/database-normalization-description)." Microsoft Office Support, Microsoft, 22 Aug. 2020
+7. PhoenixNAP. (n.d.). [Star schema vs snowflake schema: What's the difference?](https://phoenixnap.com/kb/star-vs-snowflake-schema) Retrieved April 5, 2023
+8. Kimball Group. (n.d.). [Factless Fact Table](https://www.kimballgroup.com/data-warehouse-business-intelligence-/static/images/resources/kimball-techniques/dimensional-modeling-techniques/factless-fact-table/). Retrieved April 7, 2023
