chore: modify thumbnail  card

--- a/data/blog/dimensional-part-1.mdx
+++ b/data/blog/dimensional-part-1.mdx
@@ -87,7 +87,7 @@ MongoDB also provides support for **horizontal scaling**, allowing it to handle 
 
 The dimensional data model is specifically designed for data warehousing and business intelligence applications. It is optimized for fast queries and analysis by structuring data into "facts" (measures) and "dimensions" (attributes), which can be easily analyzed using **OLAP** tools.
 
-![dim-data-model](/static/images/resource/dimensional-part-1/thumbnail.png)
+![dim-data-model](/static/images/resource/dimensional-part-1/thumbnail.jpg)
 
 ## 4. Normalization
 
