chore: update ava and info

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,13 +1,13 @@
 ---
 name: Tieu Khoi Mai
 avatar: /static/images/avatar.png
-occupation: Data Analyst @ Fossil Group
+occupation: ex-Data Analyst @ Fossil Group
 email: tieukhoimai@gmail.com
 linkedin: https://www.linkedin.com/in/tieukhoimai/
 github: https://github.com/tieukhoimai
 ---
 
-As a Data Analyst with 3+ years of experience, I currently hold a dual role at Fossil Group as both an Analytics Project Manager and Data Analyst. Additionally, I specialize in designing intricate data flow mechanisms between connected devices and companion apps. Leveraging my expertise, I ensure seamless and efficient data transfer, providing valuable insights into user behavior, product performance, customer segmentation, and wellness data from wrist-based wearable devices.
+I am currently pursuing a Master's degree in Data Science at the University of Verona. With over 3 years of experience as a Data Analyst, I held a dual role at Fossil Group as an Analytics Project Manager and Data Analyst. Additionally, I specialize in designing intricate data flow mechanisms between connected devices and companion apps. Leveraging my expertise, I ensure seamless and efficient data transfer, providing valuable insights into user behavior, product performance, customer segmentation, and wellness data from wrist-based wearable devices.
 
 I am a dual degree graduate with a BS in Mathematics and Computer Sciences and a BBA in International Business. I have a strong background in data analysis, data engineering, and project management, as well as a keen interest in product development and innovation.
 
