chore: align center image

--- a/data/blog/gaussian-naive-bayes.mdx
+++ b/data/blog/gaussian-naive-bayes.mdx
@@ -116,7 +116,9 @@ plt.xlabel('$x$')
 plt.show()
 ```
 
-![likelihood_diff_mean](/static/images/resource/gaussian-naive-bayes/likelihood_diff_mean.png)
+<p align="center">
+  <img src="/static/images/resource/gaussian-naive-bayes/likelihood_diff_mean.png" />
+</p>
 
 - The value of $\sigma^2$ is a positive value, with $\sigma$ representing the spread of this distribution. A large $\sigma$ indicates a wide range of output values, and vice versa.
 
@@ -144,7 +146,9 @@ plt.xlabel('$x$')
 plt.show()
 ```
 
-![likelihood_diff_var](/static/images/resource/gaussian-naive-bayes/likelihood_diff_var.png)
+<p align="center">
+  <img src="/static/images/resource/gaussian-naive-bayes/likelihood_diff_var.png" />
+</p>
 
 **Multivariate normal distribution (or multivariate density)**
 
@@ -256,7 +260,10 @@ from sklearn.metrics import ConfusionMatrixDisplay
 cm_display = ConfusionMatrixDisplay(cm).plot()
 ```
 
-![predicted](/static/images/resource/gaussian-naive-bayes/predicted.png)
+<p align="center">
+  <img src="/static/images/resource/gaussian-naive-bayes/predicted.png" />
+</p>
+
 
 ## Reference
 
