--- a/data/blog/dimensional-part-1.mdx
+++ b/data/blog/dimensional-part-1.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Dimensional Modeling - Part 1: Basic Fact Table Techniques"
 date: '2023-04-02'
-tags: ['Data Warehouse']
+tags: ['Data Warehouse', 'Database']
 draft: false
 summary: 'In this article, I will introduce the concept of the Basic Fact table in Dimensional data modeling. To understand this technique, we will explore the different types of data modeling and recap some fundamental knowledge, including the star and snowflake schemas, and the concepts of normalization.'
 image: '/static/images/resource/dimensional-part-1/thumbnail.jpg'
