--- a/data/blog/dimensional-part-2.mdx
+++ b/data/blog/dimensional-part-2.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Dimensional Modeling - Part 2: Basic Dimension Table Techniques"
 date: '2023-08-08'
-tags: ['Data Warehouse']
+tags: ['Data Warehouse', 'Database']
 draft: false
 summary: 'The topics covered include Degenerate Dimension, Conformed Dimension, Role-Playing Dimension, Junk Dimension, Outrigger Dimension, and Slowly Changing Dimensions (SCD). The SCD category further delves into different types, such as Type 0 to Type 7, each with its unique approach to handling historical and changing data.'
 image: '/static/images/resource/dimensional-part-2/thumbnail.jpg'
