--- a/data/blog/statis-and-prob.mdx
+++ b/data/blog/statis-and-prob.mdx
@@ -1,98 +1,97 @@
 ---
-title: Statistic and Probability
+title: '[VN] Probability and Statistics: Two Sides of the Same Coin'
 date: '2022-12-18'
 tags: ['Statistics', 'Probability']
 draft: false
-summary: 'Some folks asked me about statistics - probability, toward which I answered that I had only studied a bit and knew very little about statistics. Then they said are these are one?. In fact, Statistics and Probability are distinct from one another'
+summary: 'Xác suất và thống kê là khái niệm quen thuộc và thường đi cùng với nhau, chính vì vậy đôi khi chúng ta dễ nhầm lẫm rằng hai khái niệm này là một. Bài viết này làm rõ sự khác biệt giữa xác suất và thống kê, đồng thời đưa ra những định nghĩa về các khái niệm cơ bản trong lĩnh vực này.'
 image: '/static/images/resource/statis-and-prob/circle-truth.png'
 ---
 
 <TOCInline toc={props.toc}/>
 
-Xác suất và thống kê là khái niệm quen thuộc và thường đi cùng với nhau, chính vì vậy đôi khi chúng ta dễ nhầm lẫm rằng hai khái niệm này là một. Trong bài viết này, mình sẽ tóm tắt lại sự khác biệt giữa xác suất và thống kê, đồng thời đưa ra những định nghĩa những khái niệm cơ bản trong lĩnh vực này.
+Xác suất và thống kê là khái niệm quen thuộc và thường đi cùng với nhau, chính vì vậy đôi khi chúng ta dễ nhầm lẫm rằng hai khái niệm này là một. Bài viết này làm rõ sự khác biệt giữa xác suất và thống kê, đồng thời đưa ra những định nghĩa về các khái niệm cơ bản trong lĩnh vực này.
 
 ## 1. Xác suất (Probability)
 
-Khái niệm đầu tiên mình đề cập đến là randomness - tính ngẫu nhiên là những sự kiện (events) mà chúng ta không thể dự đoán kết quả một cách chắc chắn. Một ví dụ điển hình nhất là việc tung đồng xu, khi đó sự ngẫu nhiên là một cách nghĩ thể hiện rằng chúng ta không biết đồng xu sẽ là mặt sấp hay ngửa. Khi đó xác suất đồng xu suất hiện mặt ngửa là 50%. 
+Khái niệm đầu tiên được đề cập đến là randomness - tính ngẫu nhiên là những sự kiện (events) mà chúng ta không thể dự đoán kết quả một cách chắc chắn. Một ví dụ điển hình nhất là việc tung đồng xu, khi đó sự ngẫu nhiên ngụ ý rằng chúng ta không biết đồng xu sẽ là mặt sấp hay ngửa. Khi đó xác suất đồng xu suất hiện mặt ngửa là 50%. 
 
-Chính vì vậy, *xác suất là một môn khoa học nghiên cứu về sự ngẫu nhiên* - Probability studies randomness.
+Chính vì vậy, *xác suất là một môn khoa học nghiên cứu về sự ngẫu nhiên*. Khi nói về xác suất tức là nói về khả năng sự việc đó xảy ra. Có 2 cách hiểu phổ biến về xác suất. 
 
-Khi nói về xác suất tức là nói về khả năng sự việc đó xảy ra. Có 2 cách hiểu phổ biến về xác suất. 
+- **Tần số tương đối**: Xác suất của một biến cố có thể được ước lượng bằng cách thực hiện một phép thử ngẫu nhiên nhiều lần và tính tỷ lệ số lần biến cố đó xảy ra. Cách hiểu này dựa trên Luật số lớn (Law of Large Numbers), luật này phát biểu rằng khi số lần thử nghiệm tăng lên, tần số tương đối của một biến cố sẽ tiến gần đến xác suất thực của biến cố đó.
 
-- Thứ nhất là tần số tương đối (relative frequency), có nghĩa là nếu chúng ta tung đồng xu rất nhiều lần thì khoảng 12 lần sẽ xuất hiện mặt ngửa. Khi số lần tung đồng xu tăng lên, tỷ lệ xuất hiện mặt ngửa sẽ càng tiến gần đến con số 12, cách hiểu về xác suất này là một trường hợp đặc biệt của luật số lớn (law of large numbers).
-- Thứ hai, là sự định lượng về mức độ niềm tin của chúng ta rằng một điều gì đó sẽ xảy ra. Ví dụ như việc dự báo thời tiết. Khi nghĩ về khả năng trời mưa, chúng ta sẽ xem xét những điều kiện như mây, độ ẩm hay xác suất trời sẽ mưa trong những điều kiện tương tự như hiện tại và khi đó những người khác nhau sẽ đưa ra những ước lượng khác nhau về xác suất trời mưa.
+- **Mức độ niềm tin**: Xác suất cũng có thể được hiểu là mức độ tin tưởng của chúng ta rằng một sự kiện sẽ xảy ra. Cách hiểu này mang tính chủ quan hơn, nhưng nó rất hữu ích trong các tình huống mà chúng ta không thể thực hiện nhiều lần thử nghiệm. Ví dụ như việc dự báo thời tiết. Khi nghĩ về khả năng trời mưa, chúng ta sẽ xem xét những điều kiện như mây, độ ẩm hay xác suất trời sẽ mưa trong những điều kiện tương tự như hiện tại. Khi đó những cá nhân khác nhau có thể đưa ra các ước tính xác suất khác nhau dựa trên cách hiểu của họ về các yếu tố này.
+
+### Ví dụ về ứng dụng của xác suất:
 
 Một ví dụ áp dụng xác suất là hệ thống thông tin liên lạc [1]. Mỗi hệ thống sẽ truyền thông tin từ nơi này đến nơi khác. Khi chúng ta nói chuyện điện thoại, những gì chúng ta nói sẽ được chuyển đổi thành những chuỗi 0,1 được gọi là information bits - sau đó những bit này được chuyển từ ăng-ten điện thoại đến một tháp di động gần đó. Khi đó bài toán cần giải quyết là trong quá trình truyền sẽ luôn bị ảnh hưởng bởi nhiễu (noise). Ví dụ như điện thoại truyền chuỗi 0-1-0-**0**-1-0 nhưng chuỗi nhận được là 0-1-0-**1**-1-0. Khi đó bit thứ tư được gọi là lỗi (error) và ảnh hưởng đến chất lượng âm thanh của cuộc trò chuyện. Những tiếng ồn (noise) trong đường truyền là một hiện tượng ngẫu nhiên (random phenomenon). Trước khi gửi tín hiệu đó, chúng ta sẽ không biết bits đó có bị ảnh hưởng hay không. Nó được mô tả như việc tung một đồng xu cho mỗi bits để biết bits đó có bị lỗi hay không. Lý thuyết xác suất được sử dụng rộng rãi trong thiết kế các hệ thống thông tin liên lạc hiện đại nhằm hiểu được hành vi của tiếng ồn trong các hệ thống này và thực hiện các biện pháp sửa lỗi.
 
 Vì vậy, tính ngẫu nhiên (randomness) phổ biến ở khắp mọi nơi và lý thuyết xác suất nói một cách dễ hiểu là nghiên cứu về tính ngẫu nhiên.
 
-Một ví dụ khác phổ biến trong xác suất để chúng ta thấy rõ tính ngẫu nhiên từ bài giảng 1 -Introduction - **[MIT 18.650 Statistics for Applications, Fall 2016](https://ocw.mit.edu/courses/18-650-statistics-for-applications-fall-2016/)**
+### Ví dụ về tính ngẫu nhiên
 
-*Ví dụ 1: Tung xúc xắc 1 lần*
+Dưới đây là các ví dụ minh họa tính ngẫu nhiên [2]
 
-- Alice sẽ nhận được $1 nếu mặt xúc xắc ≤ 3
-- Bob sẽ nhận được $2 nếu mặt xúc xắc ≤ 2
+* **Ví dụ 1: Tung xúc xắc 1 lần**
 
-Câu hỏi là chúng ta sẽ muốn trở thành Alice hay Bob?
+  - Alice sẽ nhận được $1 nếu kết quả gieo xúc xắc là ≤ 3
+  - Bob sẽ nhận được $2 nếu kết quả gieo xúc xắc là ≤ 2
 
-Ta ký hiệu kỳ vọng (expectation) của Alice và Bob lần lượt là $E[A], E[B]$. Ta thấy $E[A] \ge E[B]$
+  Câu hỏi đặt ra là, chúng ta muốn trở thành Alice hay Bob?
 
-$$
-E[A] = 1 \times \frac{3}{6} = \frac{1}{2}
-$$
+  Ta ký hiệu kỳ vọng (expectation) của Alice và Bob lần lượt là $E[A], E[B]$. Ta thấy $E[A] \ge E[B]$
 
-$$
-E[B] = 2 \times \frac{2}{6} = \frac{2}{3} > \frac{1}{2}
-$$
+  $$
+  E[A] = 1 \times \frac{3}{6} = \frac{1}{2}
+  E[B] = 2 \times \frac{2}{6} = \frac{2}{3} > \frac{1}{2}
+  $$
 
-*Ví dụ 2: Tung xúc xắc 2 lần*
+* **Ví dụ 2: Tung xúc xắc 2 lần**
 
-- Hãy chọn một con số giữa 2 và 12
-- Bạn sẽ thắng 100$ nếu chọn đúng tổng của 2 con xúc xắc
+  - Chọn một số từ 2 đến 12
+  - Bạn sẽ thắng 100$ nếu chọn đúng tổng của hai lần gieo xúc xắc
 
-Ta gọi tổng của 2 lần lắc đó chúng ta gọi là $X+Y$ và $Z$ là con số chúng ta chọn. Khi đó, số tiền chúng ta thắng được là $100 \times P[X+Y = Z]$, vì vậy chúng ta cần tính $P[X+Y = Z]$ với $Z: 2 \rightarrow 12$
+  Ta gọi tổng của 2 lần lắc đó chúng ta gọi là $X+Y$ và $Z$ là con số chúng ta chọn. Khi đó, số tiền chúng ta thắng được là $100 \times P[X+Y = Z]$, vì vậy chúng ta cần tính $P[X+Y = Z]$ với $Z: 2 \rightarrow 12$
 
 ## 2. Thống kê (Statistic)
 
-Tiếp tục ví dụ trên, dưới góc nhìn thống kê thì ta thấy được rằng mỗi mặt xúc xắc sẽ có xác suất là $\frac{1}{6}$ và phát triển lên từ dữ kiện đó bằng cách tung xúc sắc cho đến khi đếm được một số và ước tính (estimate) được số đó.
+Tiếp tục ví dụ trên, dưới góc nhìn thống kê thì ta thấy được rằng mỗi mặt xúc xắc sẽ có xác suất là $\frac{1}{6}$ Chúng ta có thể xây dựng dựa trên kiến thức này bằng cách gieo xúc xắc nhiều lần, đếm số lần xuất hiện của mỗi mặt và **ước tính** (estimate) xác suất của chúng.
 
-Tuy nhiên với những quy trình phức tạp hơn (complicated process), chúng ta sẽ xem chúng như công thức sau
+Tuy nhiên với những **quá trình phức tạp** (complicated process), chúng ta sẽ xem chúng như công thức sau
 
 $$
 \text{Complicated process} = \text{Simple process} + \text{Random noise}
 $$
 
-Vậy nên thống kê là quá trình ước lượng tham số dựa trên dữ liệu (estimate parameters from data) và dữ liệu thì đến từ những quá trình ngẫu nhiên (Data comes from random process). Điều này giống như một vòng lặp (circle of truth)
+$$
+\text{Quá trình phức tạp} = \text{Quá trình đơn giản} + \text{Nhiễu}
+$$
+
+Do đó, thống kê là quá trình **ước lượng tham số dựa trên dữ liệu (estimate parameters from data)**, và dữ liệu bắt nguồn từ các **quá trình ngẫu nhiên (data comes from random process)**. Điều này tạo thành một vòng lặp (circle of truth)
 
 ![circle-of-truth](/static/images/resource/statis-and-prob/circle-truth.png)
 
-Khi chúng ta thử nghiệm các xác suất, chúng ta được đưa cho mô hình để dự báo dữ liệu (given model, predict data) và sau đó dùng dữ liệu để ước lượng tham số và đưa ra mô hình. Trong một vài tài liệu khác, điều này được gọi là *“Central Dogma of Inference”*
+Khi chúng ta thử nghiệm các xác suất, chúng ta được đưa cho mô hình để dự báo dữ liệu **(given model, predict data)** và sau đó dùng dữ liệu để ước lượng tham số và đưa ra mô hình **(given data, predict model)**. Điều này được gọi là **“Central Dogma of Inference”**:
 
-(1) Thu thập một tập hợp các quan sát về quần thể hoặc hiện tượng hay còn được gọi là dữ liệu được ghi lại, vẽ đồ thị, phân tích và giải thích để thu thập thông tin hữu ích.
+- Thu thập một tập hợp các quan sát về quần thể hoặc hiện tượng hay còn được gọi là dữ liệu được ghi lại, vẽ đồ thị, phân tích và giải thích để thu thập thông tin hữu ích.
+- Tuy nhiên, dữ liệu có thể thay đổi và tồn tại khả năng không chắc chắn (uncertainty) trong việc đưa ra suy luận (inference) về những dữ liệu đó.
 
-(2) Tuy nhiên, dữ liệu có thể thay đổi và tồn tại khả năng không chắc chắn (uncertainty) trong việc đưa ra suy luận (inference) về những dữ liệu đó.
-
-Khi chúng ta thử nghiệm các xác suất, chúng ta được đưa cho mô hình để dự báo dữ liệu **(given model, predict data)** và sau đó dùng dữ liệu để ước lượng tham số và đưa ra mô hình **(given data, predict model)**. Trong một vài tài liệu khác, còn được gọi là *“Central Dogma of Inference”*
-
-(1) Thu thập một tập hợp các quan sát về quần thể hoặc hiện tượng hay còn được gọi là dữ liệu được ghi lại, vẽ đồ thị, phân tích và giải thích để thu thập thông tin hữu ích.
-
-(2) Tuy nhiên, dữ liệu có thể thay đổi và tồn tại khả năng không chắc chắn (uncertainty) trong việc đưa ra suy luận (inference) về những dữ liệu đó.
+Thống kê sử dụng dữ liệu từ mẫu để suy luận về quần thể. Ví dụ, chúng ta có thể sử dụng dữ liệu về chiều cao của 100 học sinh được chọn ngẫu nhiên để ước lượng chiều cao trung bình của tất cả học sinh trong trường.
 
 ![central-dogma-of-inference](/static/images/resource/statis-and-prob/central-dogma-of-inference.png)
 
-Từ đó, ta nhận thấy được rằng một mô hình xác suất (probabilistic model) hoặc suy rộng thống kê (statistical inference) sẽ có các mục tiêu sau:
+Từ đó, ta nhận thấy được rằng một **mô hình xác suất (probabilistic model)** hoặc **suy rộng thống kê (statistical inference)** sẽ có các mục tiêu sau:
 
 - Đặc trưng cho tính ngẫu nhiên hoặc “nhiễu” trong dữ liệu
 - Định lượng sự không chắc chắn (uncertainty) trong các mô hình hoặc các quyết định đưa ra từ dữ liệu
 - Dự đoán các quan sát hoặc quyết định trong tương lai khi đối mặt với sự không chắc chắn
 
-Một cách khác dễ nhớ hơn, lặp lại công thức
+## 3. Kết luận
 
-# 3. Kết luận (Conclusion)
+Xác suất và thống kê là hai lĩnh vực có liên quan chặt chẽ với nhau.
 
-**Xác suất (Probability)** nghiên cứu về sự ngẫu nhiên (**randomness**) bằng cách mô tả về một quá trình ngẫu nhiên của một tập **mẫu** (**sample**) và đưa ra xác suất của một tình huống cụ thể
+- **Xác suất (Probability)** nghiên cứu về sự **ngẫu nhiên** (**randomness**) bằng cách mô tả về một quá trình ngẫu nhiên của một tập **mẫu** (**sample**) và đưa ra xác suất của một tình huống cụ thể
 
-**Thống kê (Statistic)** ước lượng tham số từ dữ liệu và đưa ra kết quả gần nhất có thể đối với **quần thể** (**population**)
+- **Thống kê (Statistic)** ước lượng tham số từ dữ liệu , nhằm mục đích suy luận về **quần thể** (**population**) dựa trên mẫu quan sát được. 
 
 ![conclusion](/static/images/resource/statis-and-prob/conclusion.png)
 
@@ -100,4 +99,3 @@ Một cách khác dễ nhớ hơn, lặp lại công thức
 
 1. Pishro-Nik, H. (2016). Introduction to probability, statistics, and random processes.
 2. Lecture 1: Introduction - **[MIT 18.650 Statistics for Applications, Fall 2016](https://ocw.mit.edu/courses/18-650-statistics-for-applications-fall-2016/)**
-3. [Spatial Analysis Methods and Practice](https://www.cambridge.org/core/books/spatial-analysis-methods-and-practice/4C135005A621335D06CC63EFF17E3913) *Describe – Explore – Explain through GIS*, pp. 59 - 146
