chore: change subtitle

--- a/data/blog/statis-and-prob-eng.mdx
+++ b/data/blog/statis-and-prob-eng.mdx
@@ -26,9 +26,7 @@ One application of probability is in **communication systems**. These systems tr
 
 Therefore, randomness is ubiquitous, and probability theory, simply put, is the study of randomness.
 
-### Illustrating Randomness
-
-Here are examples demonstrating randomness [2]:
+Here are examples demonstrating probability [2]:
 
 * **Example 1: Rolling a die once**
 
