--- a/data/blog/statis-and-prob.mdx
+++ b/data/blog/statis-and-prob.mdx
@@ -21,15 +21,11 @@ Chính vì vậy, *xác suất là một môn khoa học nghiên cứu về sự
 
 - **Mức độ niềm tin**: Xác suất cũng có thể được hiểu là mức độ tin tưởng của chúng ta rằng một sự kiện sẽ xảy ra. Cách hiểu này mang tính chủ quan hơn, nhưng nó rất hữu ích trong các tình huống mà chúng ta không thể thực hiện nhiều lần thử nghiệm. Ví dụ như việc dự báo thời tiết. Khi nghĩ về khả năng trời mưa, chúng ta sẽ xem xét những điều kiện như mây, độ ẩm hay xác suất trời sẽ mưa trong những điều kiện tương tự như hiện tại. Khi đó những cá nhân khác nhau có thể đưa ra các ước tính xác suất khác nhau dựa trên cách hiểu của họ về các yếu tố này.
 
-### Ví dụ về ứng dụng của xác suất:
-
 Một ví dụ áp dụng xác suất là hệ thống thông tin liên lạc [1]. Mỗi hệ thống sẽ truyền thông tin từ nơi này đến nơi khác. Khi chúng ta nói chuyện điện thoại, những gì chúng ta nói sẽ được chuyển đổi thành những chuỗi 0,1 được gọi là information bits - sau đó những bit này được chuyển từ ăng-ten điện thoại đến một tháp di động gần đó. Khi đó bài toán cần giải quyết là trong quá trình truyền sẽ luôn bị ảnh hưởng bởi nhiễu (noise). Ví dụ như điện thoại truyền chuỗi 0-1-0-**0**-1-0 nhưng chuỗi nhận được là 0-1-0-**1**-1-0. Khi đó bit thứ tư được gọi là lỗi (error) và ảnh hưởng đến chất lượng âm thanh của cuộc trò chuyện. Những tiếng ồn (noise) trong đường truyền là một hiện tượng ngẫu nhiên (random phenomenon). Trước khi gửi tín hiệu đó, chúng ta sẽ không biết bits đó có bị ảnh hưởng hay không. Nó được mô tả như việc tung một đồng xu cho mỗi bits để biết bits đó có bị lỗi hay không. Lý thuyết xác suất được sử dụng rộng rãi trong thiết kế các hệ thống thông tin liên lạc hiện đại nhằm hiểu được hành vi của tiếng ồn trong các hệ thống này và thực hiện các biện pháp sửa lỗi.
 
 Vì vậy, tính ngẫu nhiên (randomness) phổ biến ở khắp mọi nơi và lý thuyết xác suất nói một cách dễ hiểu là nghiên cứu về tính ngẫu nhiên.
 
-### Ví dụ về tính ngẫu nhiên
-
-Dưới đây là các ví dụ minh họa tính ngẫu nhiên [2]
+Dưới đây là một vài ví dụ cơ bản của xác suất [2]
 
 * **Ví dụ 1: Tung xúc xắc 1 lần**
 
