chore: change author metadata

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,5 +1,5 @@
 ---
-name: Tieu Khoi Mai
+name: Mai TIEU Khoi
 avatar: /static/images/avatar.png
 occupation: ex-Data Analyst @ Fossil Group
 email: tieukhoimai@gmail.com
@@ -8,8 +8,6 @@ github: https://github.com/tieukhoimai
 ---
 
 I am currently pursuing a Master's degree in Data Science at the University of Verona. With over 3 years of experience as a Data Analyst, I held a dual role at Fossil Group as an Analytics Project Manager and Data Analyst. Additionally, I specialize in designing intricate data flow mechanisms between connected devices and companion apps. Leveraging my expertise, I ensure seamless and efficient data transfer, providing valuable insights into user behavior, product performance, customer segmentation, and wellness data from wrist-based wearable devices.
-
-I am a dual degree graduate with a BS in Mathematics and Computer Sciences and a BBA in International Business. I have a strong background in data analysis, data engineering, and project management, as well as a keen interest in product development and innovation.
 
 <p align="left">
   <a href="https://skillicons.dev">
