chore: add asDisclosure for TOC

--- a/data/blog/color-and-data.mdx
+++ b/data/blog/color-and-data.mdx
@@ -7,7 +7,7 @@ summary: 'Color makes a chart look better and makes it easier for people to unde
 image: '/static/images/resource/color-and-data/background.png'
 ---
 
-<TOCInline toc={props.toc}/>
+<TOCInline toc={props.toc} asDisclosure toHeading={3} />
 
 ## 1. Overview
 
