--- a/data/blog/dimensional-part-1.mdx
+++ b/data/blog/dimensional-part-1.mdx
@@ -7,7 +7,7 @@ summary: 'In this article, I will introduce the concept of the Basic Fact table 
 image: '/static/images/resource/dimensional-part-1/thumbnail.jpg'
 ---
 
-<TOCInline toc={props.toc}/>
+<TOCInline toc={props.toc} asDisclosure toHeading={3} />
 
 ## 1. Introduction
 
