--- a/data/blog/dimensional-part-2.mdx
+++ b/data/blog/dimensional-part-2.mdx
@@ -7,7 +7,7 @@ summary: 'The topics covered include Degenerate Dimension, Conformed Dimension, 
 image: '/static/images/resource/dimensional-part-2/thumbnail.jpg'
 ---
 
-<TOCInline toc={props.toc}/>
+<TOCInline toc={props.toc} asDisclosure toHeading={3} />
 
 ## 1. Degenerate Dimension
 
