--- a/data/blog/gaussian-naive-bayes.mdx
+++ b/data/blog/gaussian-naive-bayes.mdx
@@ -7,7 +7,7 @@ summary: "We delve into the intricacies of Gaussian Naive Bayes classification. 
 image: '/static/images/resource/gaussian-naive-bayes/thumbnail.JPG'
 ---
 
-<TOCInline toc={props.toc}/>
+<TOCInline toc={props.toc} asDisclosure toHeading={3} />
 
 ## Gaussian Naive Bayes
 
