--- a/data/blog/llms-part-1.mdx
+++ b/data/blog/llms-part-1.mdx
@@ -7,7 +7,7 @@ summary: 'This article provides an overview of Large Language Models (LLMs), LLM
 image: '/static/images/resource/llms/part-1.png'
 ---
 
-<TOCInline toc={props.toc}/>
+<TOCInline toc={props.toc} asDisclosure toHeading={3} />
 
 ## I. Large language models (LLMs)
 
