--- a/data/blog/llms-part-2.mdx
+++ b/data/blog/llms-part-2.mdx
@@ -7,7 +7,7 @@ summary: 'This article provides an overview of the core concepts of Large Langua
 image: '/static/images/resource/llms/chat_models.png'
 ---
 
-<TOCInline toc={props.toc}/>
+<TOCInline toc={props.toc} asDisclosure toHeading={3} />
 
 ## I. LLM components
 
