--- a/data/blog/principle-design-in-data-viz.mdx
+++ b/data/blog/principle-design-in-data-viz.mdx
@@ -21,7 +21,7 @@ From these elements, it becomes evident that the field of data visualization com
 
 In this context, we can refer to data visualization as a **modern art** form. Instead of providing step-by-step instructions for enhancing your dashboard, this article will introduce seven design principles as a solid foundation for this **“modern art”** field.
 
-<TOCInline toc={props.toc}/>
+<TOCInline toc={props.toc} asDisclosure toHeading={3} />
 
 ## Principle 1. Balance
 
