--- a/data/blog/statis-and-prob-eng.mdx
+++ b/data/blog/statis-and-prob-eng.mdx
@@ -7,7 +7,7 @@ summary: 'Some folks asked me about statistics - probability, toward which I ans
 image: '/static/images/resource/statis-and-prob/circle-truth.png'
 ---
 
-<TOCInline toc={props.toc}/>
+<TOCInline toc={props.toc} asDisclosure toHeading={3} />
 
 Probability and statistics are closely related fields that are often mentioned together, leading to the misconception that they are one and the same. This article clarifies the distinction between probability and statistics, providing definitions of fundamental concepts within these domains.
 
