--- a/data/blog/statis-and-prob.mdx
+++ b/data/blog/statis-and-prob.mdx
@@ -7,7 +7,7 @@ summary: 'Xác suất và thống kê là khái niệm quen thuộc và thườn
 image: '/static/images/resource/statis-and-prob/circle-truth.png'
 ---
 
-<TOCInline toc={props.toc}/>
+<TOCInline toc={props.toc} asDisclosure toHeading={3} />
 
 Xác suất và thống kê là khái niệm quen thuộc và thường đi cùng với nhau, chính vì vậy đôi khi chúng ta dễ nhầm lẫm rằng hai khái niệm này là một. Bài viết này làm rõ sự khác biệt giữa xác suất và thống kê, đồng thời đưa ra những định nghĩa về các khái niệm cơ bản trong lĩnh vực này.
 
