--- a/data/blog/think-about-data.mdx
+++ b/data/blog/think-about-data.mdx
@@ -7,7 +7,7 @@ summary: 'This topic discusses how we think about data between data aware, data 
 image: '/static/images/resource/think-about-data/thumbnail.jpg'
 ---
 
-<TOCInline toc={props.toc}/>
+<TOCInline toc={props.toc} asDisclosure toHeading={3} />
 
 💡 This topic discusses how we think about data between data aware, data informed, and data driven - as a data approach for various jobs or in daily life. It is a part of sharing session which I presented in Fossil Vietnam on August 2022.
 
