--- a/data/blog/vector-database.mdx
+++ b/data/blog/vector-database.mdx
@@ -7,7 +7,7 @@ summary: 'In this article, we delve into Vector Databases by using Pinecone and 
 image: '/static/images/resource/vector-database/fig1.png'
 ---
 
-<TOCInline toc={props.toc}/>
+<TOCInline toc={props.toc} asDisclosure toHeading={3} />
 
 ## I. Introcution
 
