chore: add reference url for principle-design-in-data-viz article

--- a/data/blog/principle-design-in-data-viz.mdx
+++ b/data/blog/principle-design-in-data-viz.mdx
@@ -7,6 +7,8 @@ summary: 'A data visualization, while creatively pleasing, should also serve a f
 image: '/static/images/resource/principle-design-in-data-viz/background.png'
 ---
 
+> This article represents TALK#6 in the DATACracy series. The content, originally written in Vietnamese, is available on the [project's official website](https://www.dtacracy.org/recap-talk-6-data-visualization-storytelling/). 
+
 > Data visualization is the visual presentation of data or information. The goal of data visualization is to communicate data or information clearly and effectively to readers. Typically, data is visualized in the form of a chart, infographic, diagram or map. - [What is Data Visualization?](https://venngage.com/blog/data-visualization/)
 
 However, it's important to note that just making a lot of charts and put them together doesn't mean you're doing **GOOD** data visualization. So, what makes a visualization truly “good”? [Another article](https://informationisbeautiful.net/visualizations/what-makes-a-good-data-visualization/) points out four key elements: **Information, Function, Visual Form, and Story**. These components are crucial for achieving a successful and "good" visualization.
