chore: edit about info

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -7,7 +7,9 @@ linkedin: https://www.linkedin.com/in/tieukhoimai/
 github: https://github.com/tieukhoimai
 ---
 
-I am currently pursuing a Master's degree in Data Science at the University of Verona. With over 3 years of experience as a Data Analyst, I held a dual role at Fossil Group as an Analytics Project Manager and Data Analyst. Additionally, I specialize in designing intricate data flow mechanisms between connected devices and companion apps. Leveraging my expertise, I ensure seamless and efficient data transfer, providing valuable insights into user behavior, product performance, customer segmentation, and wellness data from wrist-based wearable devices.
+I am a Master's student in Data Science at the University of Verona (Univr) and am currently studying at the University of Oslo (UiO) as part of the Erasmus+ program for 2024.
+
+With over 3 years of experience as a Data Analyst, I held a dual role at Fossil Group as an Analytics Project Manager and Data Analyst. Additionally, I specialize in designing intricate data flow mechanisms between connected devices and companion apps. Leveraging my expertise, I ensure seamless and efficient data transfer, providing valuable insights into user behavior, product performance, customer segmentation, and wellness data from wrist-based wearable devices.
 
 <p align="left">
   <a href="https://skillicons.dev">
